[package]
name = "objc"
version = "0.1.6"
authors = ["Steven Sheldon"]
build = "build.rs"

description = "Objective-C Runtime bindings and wrapper for Rust."
keywords = ["objective-c", "osx", "ios", "cocoa", "uikit"]
readme = "README.md"
repository = "http://github.com/SSheldon/rust-objc"
documentation = "http://ssheldon.github.io/rust-objc/objc/"
license = "MIT"

exclude = [".gitignore", "ios-tests/**", "xtests/**"]

[features]
exception = ["objc_exception"]
gnustep_runtime = [ "gcc" ]

[dependencies]
libc = "0.1"
malloc_buf = "0.0"

[dependencies.objc_exception]
version = "0.0"
optional = true

[build-dependencies.gcc]
version = "0.3.14"
optional = true
